--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-joyride": "^2.8.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-tooltip": "^5.28.0",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
